# nn-mod-cog

./: .gitignore  .sync-book-contents.sh.swp  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  sync-book-contents.sh
code/: .gitignore  neural_net.py  perceptron.py
notebooks/: 00-intro.md  00_intro.md  01-MP-artificial-neuron.ipynb  01-MP-artificial-neuron.md  01_M-P_artificial-neuron.md  02-rossenblatt-perceptron.ipynb  adaline.ipynb  altair-data-48c282bf798d48524f9024ffaa6a1249.csv  altair-data-5f3389da8d95096aa5433ec363ec8578.csv  altair-data-af02d94ac76622735d7f7f497b240675.csv  cov-net.ipynb  glossary.md  intro-com-mod-cog.md  mp-artificial-neuron.ipynb  multilayer-perceptron.ipynb  perceptron.html  perceptron.ipynb  recommended-readings.md  recurrent-net.ipynb  roadmap-nn-mod-cog.md
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  adaline-checkpoint.ipynb  perceptron-checkpoint.ipynb
notes/: adaline-notes.md  cov-nets.md  lab-meeting-08-03-20  lab-meeting-08-03-20.md  marp-prelim-proposal.md  mcculloch-pitts-notes.md  perceptron-notes.md  rnn-notes.md  time-line.txt
