[tool.poetry]
name = "intro-comp-models-cog"
version = "0.1.0"
description = "Intro tutorial to computational models of cognition"
authors = ["Pablo Caceres <pcaceres@wisc.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
altair = "^4.0.1"
numpy = "1.18.1"
matplotlib = "3.1.2"
pandas = "0.25.2"
jupyterlab = "1.2.5"
keras = "2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
